--- a/Haakostr.Lettsok.Advertisements/Haakostr.Lettsok.Advertisements.csproj
+++ b/Haakostr.Lettsok.Advertisements/Haakostr.Lettsok.Advertisements.csproj
@@ -13,4 +13,14 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Model\" />
+    <None Remove="Controllers\V1\" />
+    <None Remove="Controllers\V2\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="Controllers\V1\" />
+    <Folder Include="Controllers\V2\" />
+  </ItemGroup>
 </Project>
