--- a/Haakostr.Lettsok.Advertisements/Haakostr.Lettsok.Advertisements.csproj
+++ b/Haakostr.Lettsok.Advertisements/Haakostr.Lettsok.Advertisements.csproj
@@ -17,10 +17,12 @@
     <None Remove="Model\" />
     <None Remove="Controllers\V1\" />
     <None Remove="Controllers\V2\" />
+    <None Remove="Model\V1\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Controllers\V1\" />
     <Folder Include="Controllers\V2\" />
+    <Folder Include="Model\V1\" />
   </ItemGroup>
 </Project>
