--- a/Haakostr.Lettsok.Advertisements/Haakostr.Lettsok.Advertisements.csproj
+++ b/Haakostr.Lettsok.Advertisements/Haakostr.Lettsok.Advertisements.csproj
@@ -18,11 +18,13 @@
     <None Remove="Controllers\V1\" />
     <None Remove="Controllers\V2\" />
     <None Remove="Model\V1\" />
+    <None Remove="Controllers\V3\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Controllers\V1\" />
     <Folder Include="Controllers\V2\" />
     <Folder Include="Model\V1\" />
+    <Folder Include="Controllers\V3\" />
   </ItemGroup>
 </Project>
