--- a/JobListingsDatabaseService/JobListingsDatabaseService.csproj
+++ b/JobListingsDatabaseService/JobListingsDatabaseService.csproj
@@ -19,11 +19,13 @@
     <None Remove="Controllers\V1\" />
     <None Remove="Model\" />
     <None Remove="Model\V1\" />
+    <None Remove="Controllers\V2\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\V1\" />
     <Folder Include="Model\" />
     <Folder Include="Model\V1\" />
+    <Folder Include="Controllers\V2\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JobListingsDatabaseService.Data\JobListingsDatabaseService.Data.csproj">
