got DI and Migrations on services and database

--- a/UserPreferencesDatabaseService/appsettings.json
+++ b/UserPreferencesDatabaseService/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LettsokDb": "server=localhost;Database=DotnetDatabase;user=dbuser;password=password"
+  }
 }
 
