--- a/JobListingsDatabaseService/appsettings.json
+++ b/JobListingsDatabaseService/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LettsokDb": "server=localhost;Database=DotnetDatabase;user=dbuser;password=password"
+  }
 }
 
