--- a/UserPreferencesDatabaseService/appsettings.json
+++ b/UserPreferencesDatabaseService/appsettings.json
@@ -8,7 +8,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LettsokDb": "server=localhost;Database=DotnetDatabase;user=dbuser;password=password"
+    "LettsokDb": "server=localhost;Database=UserPreferencesDatabase;user=dbuser;password=password"
   }
 }
 
