--- a/BlazorView/BlazorView.csproj
+++ b/BlazorView/BlazorView.csproj
@@ -18,4 +18,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
