TODO: Find a way to rerender child component

--- a/BlazorView/BlazorView.csproj
+++ b/BlazorView/BlazorView.csproj
@@ -8,6 +8,10 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <Optimize></Optimize>
+    <ExternalConsole>false</ExternalConsole>
+  </PropertyGroup>
   <ItemGroup>
     <Content Remove="wwwroot\img\LETT-4.png" />
     <Content Remove="wwwroot\img\" />
