--- a/UserPreferencesDatabaseService/UserPreferencesDatabaseService.csproj
+++ b/UserPreferencesDatabaseService/UserPreferencesDatabaseService.csproj
@@ -8,6 +8,7 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.0" />
@@ -17,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +30,7 @@
     <None Remove="Model\V3\" />
     <None Remove="Controllers\V3\" />
     <None Remove="Controllers\V4\" />
+    <None Remove="Controllers\V5\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\V1\" />
@@ -38,6 +41,7 @@
     <Folder Include="Model\V3\" />
     <Folder Include="Controllers\V3\" />
     <Folder Include="Controllers\V4\" />
+    <Folder Include="Controllers\V5\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\UserPreferencesDatabaseService.Data\UserPreferencesDatabaseService.Data.csproj">
