--- a/Advertisements.Test/Advertisements.Test.csproj
+++ b/Advertisements.Test/Advertisements.Test.csproj
@@ -21,6 +21,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
