Made a fixture test towards Advertisements db. Also changed name to advertisements db

--- a/JobListingsDatabaseService/appsettings.json
+++ b/JobListingsDatabaseService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LettsokDb": "server=localhost;Database=DotnetDatabase;user=dbuser;password=password"
+    "LettsokDb": "server=localhost;Database=Advertisements;user=dbuser;password=password"
   }
 }
 
