--- a/JobListingsDatabaseService.Data/JobListingsDatabaseService.Data.csproj
+++ b/JobListingsDatabaseService.Data/JobListingsDatabaseService.Data.csproj
@@ -14,5 +14,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Moq.EntityFrameworkCore" Version="7.0.0.2" />
   </ItemGroup>
 </Project>
