--- a/JobListingsDatabaseService/JobListingsDatabaseService.csproj
+++ b/JobListingsDatabaseService/JobListingsDatabaseService.csproj
@@ -32,6 +32,7 @@
     <None Remove="Model\V1\" />
     <None Remove="Controllers\V2\" />
     <None Remove="Model\V2\" />
+    <None Remove="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\V1\" />
@@ -39,6 +40,7 @@
     <Folder Include="Model\V1\" />
     <Folder Include="Controllers\V2\" />
     <Folder Include="Model\V2\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JobListingsDatabaseService.Data\JobListingsDatabaseService.Data.csproj">
