--- a/UserPreferencesDatabaseService.Test/UserPreferencesDatabaseService.Test.csproj
+++ b/UserPreferencesDatabaseService.Test/UserPreferencesDatabaseService.Test.csproj
@@ -21,6 +21,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
+    <PackageReference Include="Moq" Version="4.18.4" />
   </ItemGroup>
 
   <ItemGroup>
