--- a/JobListingsDatabaseService.gRPC/JobListingsDatabaseService.gRPC.csproj
+++ b/JobListingsDatabaseService.gRPC/JobListingsDatabaseService.gRPC.csproj
@@ -10,10 +10,14 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\advertisement.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Protos\advertisement.proto" />
+  </ItemGroup>
 </Project>
